# so-vits-svc

./: .gitignore  Dockerfile  Makefile  pyproject.toml
training/: data_utils.py  models.py  train.py  utils.py
training/modules/: DSConv.py  attentions.py  commons.py  enhancer.py  losses.py  mel_processing.py  modules.py
training/modules/F0Predictor/: CrepeF0Predictor.py  DioF0Predictor.py  F0Predictor.py  FCPEF0Predictor.py  HarvestF0Predictor.py  PMF0Predictor.py  RMVPEF0Predictor.py  crepe.py
training/modules/F0Predictor/fcpe/: model.py  nvSTFT.py  pcmer.py
training/modules/F0Predictor/rmvpe/: constants.py  deepunet.py  inference.py  model.py  utils.py
training/vdecoder/hifigan/: models.py  utils.py
training/vdecoder/hifiganwithsnake/: models.py  nvSTFT.py
training/vdecoder/hifiganwithsnake/alias/: act.py  filter.py  resample.py
training/vdecoder/nsf_hifigan/: models.py  nvSTFT.py  utils.py
training/vencoder/: CNHubertLarge.py  ContentVec256L9.py  ContentVec768L12.py  DPHubert.py  HubertSoft.py  WavLMBasePlus.py  WhisperPPG.py  WhisperPPGLarge.py  encoder.py
training/vencoder/dphubert/: components.py  model.py  pruning_utils.py
training/vencoder/dphubert/utils/: import_huggingface_wavlm.py
training/vencoder/hubert/: hubert_model.py
training/vencoder/wavlm/: WavLM.py
training/vencoder/whisper/: audio.py  decoding.py  model.py  tokenizer.py  utils.py
